--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/realtime-js": "^2.9.0",
-    "next": "14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
+    "@supabase/supabase-js": "^2.39.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.303.0",
+    "next": "14.0.4",
+    "next-themes": "^0.4.6",
+    "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.2.0",
     "recharts": "^2.10.3"
   },
   "devDependencies": {
@@ -34,4 +35,3 @@
     "typescript": "^5"
   }
 }
-
